RAG/aws_infrastructure.yaml

AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template to create an AWS infrastructure

Resources:
  MyVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC

  MyInternetGateway:
    Type: 'AWS::EC2::InternetGateway'

  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref MyInternetGateway

  MyPublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: MyPublicSubnet

  MySecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref MyVPC
      GroupDescription: Allow SSH and HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  MyInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t2.micro
      KeyName: MyKeyPair  # You need to create this key pair in your AWS account
      ImageId: ami-0c55b159cbfafe1f0  # Example Amazon Linux 2 AMI, check for region-specific AMI IDs
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          SubnetId: !Ref MyPublicSubnet
          DeviceIndex: 0
          GroupSet:
            - !Ref MySecurityGroup
      Tags:
        - Key: Name
          Value: MyInstance

  MyS3Bucket:
    Type: 'AWS::S3::Bucket'
    Properties:
      BucketName: my-unique-bucket-name-123456789  # Update with a globally unique name
      AccessControl: Private
      VersioningConfiguration:
        Status: Enabled

Outputs:
  InstanceId:
    Description: The Instance ID
    Value: !Ref MyInstance
  S3BucketName:
    Description: The name of the S3 bucket
    Value: !Ref MyS3Bucket
